--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
+    <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
@@ -47,6 +47,6 @@
       </div>
     </div>
 
-    {% include analytics.html %}
+    {% include analytics.html %} -->
   </body>
 </html>
