--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/books">Books</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">home</a>
+            <a href="{{ site.baseurl }}/books">books</a>
+            <a href="{{ site.baseurl }}/bucket">bucket list</a>
           </nav>
         </header>
       </div>
